Changed String.trim to String.strip